<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity">
    <android.support.constraint.ConstraintLayout
        android:id="@+id/constraint1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TextView
            android:id="@+id/txt1"
            android:layout_width="0sp"
            android:layout_height="wrap_content"
            android:text="@string/login_title"
            android:layout_margin="20sp"
            style="@style/titulos"
            app:layout_constraintTop_toTopOf="@id/constraint1"
            app:layout_constraintLeft_toLeftOf="@id/constraint1"
            app:layout_constraintRight_toRightOf="@id/constraint1"/>
        <TextView
            android:id="@+id/txt2"
            android:layout_width="0sp"
            android:layout_height="wrap_content"
            android:text="@string/login_subtitle"
            android:layout_marginTop="8sp"
            style="@style/subtitulos"
            app:layout_constraintTop_toBottomOf="@id/txt1"
            app:layout_constraintLeft_toLeftOf="@id/txt1"
            app:layout_constraintRight_toRightOf="@id/txt1"/>
        <TextView
            android:id="@+id/txt3"
            android:layout_width="0sp"
            android:layout_height="wrap_content"
            android:text="@string/login_email"
            android:layout_marginTop="45sp"
            style="@style/dialogos"
            app:layout_constraintTop_toBottomOf="@id/txt2"
            app:layout_constraintLeft_toLeftOf="@id/txt2"
            app:layout_constraintRight_toRightOf="@id/txt2"/>

        <EditText
            android:id="@+id/txt_usuario"
            android:layout_width="0sp"
            android:layout_height="wrap_content"
            android:layout_marginTop="5sp"
            android:inputType="textAutoComplete"
            style="@style/dialogos"
            app:layout_constraintLeft_toLeftOf="@id/txt3"
            app:layout_constraintRight_toRightOf="@id/txt3"
            app:layout_constraintTop_toBottomOf="@id/txt3" />
        <TextView
            android:id="@+id/txt4"
            android:layout_width="0sp"
            android:layout_height="wrap_content"
            android:text="@string/login_pass"
            android:layout_marginTop="25sp"
            style="@style/dialogos"
            app:layout_constraintTop_toBottomOf="@id/txt_usuario"
            app:layout_constraintLeft_toLeftOf="@id/txt_usuario"
            app:layout_constraintRight_toRightOf="@id/txt_usuario"/>

        <EditText
            android:id="@+id/txt_pass"
            style="@style/dialogos"
            android:layout_width="0sp"
            android:layout_height="wrap_content"
            android:layout_marginTop="5sp"
            android:inputType="textPassword"
            app:layout_constraintLeft_toLeftOf="@id/txt4"
            app:layout_constraintRight_toRightOf="@id/txt4"
            app:layout_constraintTop_toBottomOf="@id/txt4" />
        <Button
            android:id="@+id/btn_access"
            android:layout_width="0sp"
            android:layout_height="wrap_content"
            android:layout_marginTop="25sp"
            android:layout_marginBottom="20sp"
            android:text="@string/login_access"
            style="@style/button"
            app:layout_constraintTop_toBottomOf="@id/txt_pass"
            app:layout_constraintLeft_toLeftOf="@id/txt_pass"
            app:layout_constraintRight_toRightOf="@id/txt_pass"
            app:layout_constraintBottom_toBottomOf="@+id/constraint1"/>
    </android.support.constraint.ConstraintLayout>
</LinearLayout>