<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Dashboard">
    <android.support.v7.widget.Toolbar
        android:id="@+id/toolbar"
        android:minHeight="?attr/actionBarSize"
        android:background="@color/orange"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"

        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <TextView
                android:text="@string/app_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/white"
                android:gravity="center"
                android:layout_margin="0sp"
                style="@style/titulos"/>
        </LinearLayout>
    </android.support.v7.widget.Toolbar>

    <ScrollView
        android:id="@+id/scroll1"
        android:layout_width="match_parent"
        android:layout_height="0sp"
        android:layout_margin="5sp"
        android:contentDescription="@string/app_name"
        app:layout_constraintBottom_toTopOf="@id/scroll2"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/toolbar">
        <android.support.v7.widget.RecyclerView
            android:id="@+id/recycleview"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:scrollbars="vertical"/>
    </ScrollView>
    <View
    android:layout_width="match_parent"
    android:layout_height="1dp"
    android:background="@android:color/darker_gray"
        app:layout_constraintTop_toBottomOf="@id/scroll1"
        app:layout_constraintLeft_toLeftOf="@id/scroll1"
        app:layout_constraintRight_toRightOf="@id/scroll1"
        app:layout_constraintBottom_toBottomOf="@id/scroll1"/>
    <HorizontalScrollView
        android:id="@+id/scroll2"
        android:layout_width="match_parent"
        android:layout_height="100sp"
        app:layout_constraintTop_toBottomOf="@id/scroll1"
        app:layout_constraintLeft_toLeftOf="@id/scroll1"
        app:layout_constraintRight_toRightOf="@id/scroll1"
        app:layout_constraintBottom_toBottomOf="parent">
        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center_vertical">
            <Button
                android:id="@+id/btn_encender"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/dash_on"
                android:drawableLeft="@drawable/ic_baseline_flash_on_24"
                style="@style/button.style"/>
            <Button
                android:id="@+id/btn_apagar"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/dash_off"
                android:drawableLeft="@drawable/ic_baseline_flash_off_24"
                style="@style/button.style"/>
            <Button
                android:id="@+id/btn_estado"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/dash_state"
                android:drawableLeft="@drawable/ic_baseline_check_circle_24"
                style="@style/button.style"/>
            <Button
                android:id="@+id/btn_reporte"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/dash_report"
                android:drawableLeft="@drawable/ic_baseline_donut_large_24"
                style="@style/button.style"/>
        </LinearLayout>
    </HorizontalScrollView>

</android.support.constraint.ConstraintLayout>